Breadcrumb made dynamic Breadcrumb items taken via props Fixed underline style

--- a/src/Breadcrumb.module.css
+++ b/src/Breadcrumb.module.css
@@ -6,16 +6,20 @@
   padding: 0;
 }
 
-.breadCrumb .breadcrumb_item {
+.breadcrumb_item {
   height: 18px;
   max-width: 210px;
   display: flex;
   align-items: center;
 
+  text-decoration: none;
   overflow: hidden;
   text-overflow: ellipsis;
 
   font-size: 14px;
   line-height: 18px;
   color: #333;
+}
+.breadcrumb_item span:hover {
+  text-decoration: underline;
 }
