--- a/src/ProductContent/ProductContent.module.css
+++ b/src/ProductContent/ProductContent.module.css
@@ -1,3 +1,45 @@
-.productContentOuterDiv {
-  width: 956px;
+.leftDiv {
+  width: 400px;
+  position: relative;
+}
+
+.imgContainer {
+  width: 100%;
+  height: 600px;
+  background-color: gray;
+}
+
+.galleryInfoCard {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+
+.photoArrowRight {
+  right: 20px;
+  color: #fff;
+  font-size: 37px;
+  position: absolute;
+  display: block;
+  text-shadow: 0 0 3px #e6e6e6, 0 0 2px #000000;
+  top: calc(50% - 25px);
+  z-index: 10;
+  cursor: pointer;
+  transition: 0.6s;
+}
+
+.photoArrowLeft {
+  left: 20px;
+  color: #fff;
+  font-size: 37px;
+  position: absolute;
+  display: block;
+  text-shadow: 0 0 3px #e6e6e6, 0 0 2px #000000;
+  top: calc(50% - 25px);
+  z-index: 10;
+  cursor: pointer;
+  transition: 0.6s;
 }
